# super-pixeled

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
00-docs/: STRATEGY.md
00-docs/plans/: 2025-11-29-repo-setup.md
10-firmware/: CMakeLists.txt
10-firmware/include/: renderer.hpp
10-firmware/src/: main.cpp  renderer.cpp
10-firmware/tests/: test_renderer.cpp
20-server/: pyproject.toml
20-server/app/: __init__.py  main.py
20-server/tests/: __init__.py  test_main.py
config/: default.toml
crates/sp-api/: Cargo.toml
crates/sp-api/src/: handlers.rs  lib.rs  routes.rs  state.rs  validation.rs
crates/sp-core/: Cargo.toml
crates/sp-core/src/: color.rs  config.rs  error.rs  lib.rs  point.rs
crates/sp-effects/: Cargo.toml
crates/sp-effects/src/: lib.rs  manager.rs  traits.rs
crates/sp-effects/src/effects/: fire.rs  mod.rs  solid.rs
crates/sp-hub75/: Cargo.toml
crates/sp-hub75/src/: driver.rs  lib.rs  mock.rs
crates/sp-renderer/: Cargo.toml
crates/sp-renderer/src/: lib.rs
crates/super-pixeled/: Cargo.toml
crates/super-pixeled/src/: main.rs
