[workspace]
resolver = "2"
members = [
    "crates/super-pixeled",
    "crates/sp-core",
    "crates/sp-effects",
    "crates/sp-renderer",
    "crates/sp-hub75",
    "crates/sp-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Thibaut Melen <thibaut@supernovae.studio>"]
license = "MIT"
repository = "https://github.com/ThibautMelen/super-pixeled"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Config
config = "0.14"

# Testing
mockall = "0.12"
tokio-test = "0.4"

# Workspace crates
sp-core = { path = "crates/sp-core" }
sp-effects = { path = "crates/sp-effects" }
sp-renderer = { path = "crates/sp-renderer" }
sp-hub75 = { path = "crates/sp-hub75" }
sp-api = { path = "crates/sp-api" }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
