[package]
name = "sp-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Effect system for Super Pixeled"

[dependencies]
sp-core = { workspace = true }
sp-renderer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
