[package]
name = "super-pixeled"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LED panel controller - main binary"

[[bin]]
name = "super-pixeled"
path = "src/main.rs"

[dependencies]
sp-core = { workspace = true }
sp-effects = { workspace = true }
sp-renderer = { workspace = true }
sp-hub75 = { workspace = true }
sp-api = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
